[gd_scene load_steps=34 format=2]

[ext_resource path="res://testPlayerStandY.png" type="Texture" id=1]
[ext_resource path="res://testPlayerStand2.png" type="Texture" id=2]
[ext_resource path="res://testPlayerStand1.png" type="Texture" id=3]
[ext_resource path="res://testPlayerStand.png" type="Texture" id=4]
[ext_resource path="res://testPlayer-Walk-v2-2.png" type="Texture" id=5]
[ext_resource path="res://testPlayer-Walk-v2-1.png" type="Texture" id=6]
[ext_resource path="res://testPlayer-Walk-v2-3.png" type="Texture" id=7]
[ext_resource path="res://Wizzard.gd" type="Script" id=8]
[ext_resource path="res://testPlayer-Attack-v1-1.png" type="Texture" id=9]
[ext_resource path="res://testPlayer-Attack-v1-2.png" type="Texture" id=10]
[ext_resource path="res://WaterBlade.tscn" type="PackedScene" id=11]
[ext_resource path="res://testPlayer-Attack-v1-3.png" type="Texture" id=12]
[ext_resource path="res://testPlayerMPBar-v1-3.png" type="Texture" id=13]
[ext_resource path="res://testPlayerHPBar-v1-1.png" type="Texture" id=14]
[ext_resource path="res://testPlayerMPBar-v1-2.png" type="Texture" id=15]
[ext_resource path="res://testPlayerHPBar-v2-1.png" type="Texture" id=16]
[ext_resource path="res://testPlayerHPBar-v2-2.png" type="Texture" id=17]
[ext_resource path="res://testPlayerPlash-v1-1.png" type="Texture" id=18]
[ext_resource path="res://WizzardPlash.gd" type="Script" id=19]
[ext_resource path="res://testPlayerPlash-v1-2.png" type="Texture" id=20]
[ext_resource path="res://WizzardNode.gd" type="Script" id=21]
[ext_resource path="res://testPlayer-ToPlash-v1-1.png" type="Texture" id=22]
[ext_resource path="res://testPlayer-ToPlash-v1-4.png" type="Texture" id=23]
[ext_resource path="res://testPlayer-ToPlash-v1-3.png" type="Texture" id=24]
[ext_resource path="res://testPlayer-ToPlash-v1-2.png" type="Texture" id=25]
[ext_resource path="res://PlayersHurtbox.gd" type="Script" id=26]
[ext_resource path="res://Mini-bottle-full.png" type="Texture" id=27]
[ext_resource path="res://Mini-bottle.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "attackOnMove",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 10 ) ],
"loop": true,
"name": "rise",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 60.0
height = 80.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "full",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 20 ) ],
"loop": true,
"name": "dip",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 18 ) ],
"loop": true,
"name": "lie",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 0.001 )

[node name="Wizzard" type="Node2D"]
script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="WizzardBody" type="KinematicBody2D" parent="."]
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="WizzardBody"]
frames = SubResource( 1 )
animation = "stand"
speed_scale = 0.35

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WizzardBody"]
visible = false
polygon = PoolVector2Array( 39.9627, 128.41, -43.7727, 128.41, -43.7727, 120.87, -44, 98, -44, 41, -44, 4, -24, -27, -10, -65, 10, -65, 24, -27, 27, -21, 40, 0, 40, 43, 40, 102, 39.9627, 120.87 )

[node name="BladeNode" parent="WizzardBody" instance=ExtResource( 11 )]
visible = false

[node name="PlayersHurtbox" type="Area2D" parent="WizzardBody" groups=[
"hurtbox",
]]
script = ExtResource( 26 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WizzardBody/PlayersHurtbox"]
visible = false
polygon = PoolVector2Array( 39.9627, 128.41, -43.7727, 128.41, -43.7727, 120.87, -44, 98, -44, 41, -44, 4, -24, -27, -10, -65, 10, -65, 24, -27, 27, -21, 40, 0, 40, 43, 40, 102, 39.9627, 120.87 )

[node name="PlayersMPBar" type="TextureProgress" parent="WizzardBody"]
margin_left = -60.0
margin_top = -190.0
margin_right = 60.0
margin_bottom = -90.0
max_value = 10.0
value = 4.0
texture_under = ExtResource( 15 )
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 13 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersHPBar" type="TextureProgress" parent="WizzardBody"]
margin_left = -60.0
margin_top = -210.0
margin_right = 60.0
margin_bottom = -110.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 17 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="WizzardBody"]
current = true
zoom = Vector2( 2, 2 )

[node name="PlayersInteractionArea" type="Area2D" parent="WizzardBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WizzardBody/PlayersInteractionArea"]
visible = false
position = Vector2( 0, 40 )
shape = SubResource( 2 )

[node name="Bottle" type="AnimatedSprite" parent="WizzardBody"]
position = Vector2( -75, -145 )
frames = SubResource( 3 )
animation = "empty"

[node name="WizzardPlash" type="KinematicBody2D" parent="."]
visible = false
z_index = -1
collision_layer = 8
collision_mask = 8
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="WizzardPlash"]
frames = SubResource( 4 )
animation = "lie"

[node name="CollisionShape2D" type="CollisionShape2D" parent="WizzardPlash"]
position = Vector2( 0, 108 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="WizzardPlash"]
current = true
zoom = Vector2( 2, 2 )

[connection signal="animation_finished" from="WizzardBody/AnimatedSprite" to="WizzardBody" method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="WizzardBody/AnimatedSprite" to="WizzardBody" method="_on_AnimatedSprite_frame_changed"]
[connection signal="was_damaged" from="WizzardBody/PlayersHurtbox" to="WizzardBody" method="_on_PlayersHurtbox_was_damaged"]
[connection signal="area_entered" from="WizzardBody/PlayersInteractionArea" to="WizzardBody" method="_on_PlayersInteractionArea_area_entered"]
[connection signal="area_exited" from="WizzardBody/PlayersInteractionArea" to="WizzardBody" method="_on_PlayersInteractionArea_area_exited"]
[connection signal="animation_finished" from="WizzardPlash/AnimatedSprite" to="WizzardPlash" method="_on_AnimatedSprite_animation_finished"]
